2003-10-18 02:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added information for NSBox.
	* Gorm.m: Updated patch level.
	* GormClassManager.m: Added description method to aid in future
	debugging.
	* GormDocument.m: Added code to skip a section of the 
	detachObject method if the object being detached doesn't
	have a name.  Added a description method.
	* GormViewEditor.m: Added _allsubviews and _subviewsForView:withArray:
	to collect all of the views which need to be detached when a
	parent view is removed from the GUI.  This is used the in implementation
	of detachSubviews.

2003-10-12 23:25 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInspectorsManager.m: Corrected method of disassociating
	connection after exception.
	* GormMenuEditor.m: Added _findAll:withArray: and _findAllSubmenus:
	to recursively collect all objects which should be deleted from the
	nameTable when the user deletes a menu item.
	* Palettes/0Menus/GormMenuInspectors.m: Eliminated uneeded variable
	and corrected method being called to eliminate previous setting
	of services/window menu.
	* Palettes/0Menus/GormNSMenu.m: Beginnings of fix to prevent Gorm
	from loading all menus at once.

2003-10-12 01:49 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added code to help with copy/paste issue.
	* GormInspectorsManager.m: Added code to do addional checks to
	ensure that the user cannot make erroneous connections.

2003-10-08 01:03 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added include for GSNibTemplates.h removed some
	comments and cleaned up the code.  In _replaceObjectsWithTemplates:
	removed <GSTemplate> which was causing some compiler warnings.
	Added code to set the defer flag on the template for any template
	which responds to setDeferFlag:.
	* Palettes/1Windows/main.m: Added braces.  Minor code cleanup.
	* Palettes/1Windows/GormNSWindowInspector.gorm: Enabled defer 
	flag.
