@@ -37,6 +37,7 @@ NSString *GormToggleGuidelineNotification = @"GormToggleGuidelineNotification";
 NSString *GormDidModifyClassNotification = @"GormDidModifyClassNotification";
 NSString *GormDidAddClassNotification = @"GormDidAddClassNotification";
 NSString *GormDidDeleteClassNotification = @"GormDidDeleteClassNotification";
+NSString *GormWillDetachObjectFromDocumentNotification = @"GormWillDetachObjectFromDocumentNotification";
 
 @class	InfoPanel;
 
@@ -517,9 +518,9 @@ NSString *GormDidDeleteClassNotification = @"GormDidDeleteClassNotification";
      forKey: @"ApplicationName"];
   [dict setObject: @"[GNUstep | Graphical] Object Relationship Modeller"
      forKey: @"ApplicationDescription"];
-  [dict setObject: @"Gorm 0.4.4 (Beta)" 
+  [dict setObject: @"Gorm 0.4.5 (Beta)" 
      forKey: @"ApplicationRelease"];
-  [dict setObject: @"0.4.4 Oct 18 2003" 
+  [dict setObject: @"0.4.5 Oct 19 2003" 
      forKey: @"FullVersionID"];
   [dict setObject: [NSArray arrayWithObjects: @"Gregory John Casamento <greg_casamento@yahoo.com>",
 			 @"Richard Frith-Macdonald <rfm@gnu.org>",
