@@ -60,6 +60,7 @@
   GormDocument *doc = (GormDocument *)[(id<IB>)NSApp activeDocument];
   // BOOL flag = NO;
 
+  object = nil; // remove reference to old object...
   [super setObject: anObject];
   [titleText setStringValue: [object title]];
   
